{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 25,
  "lineage": "be61d0b4-a7a7-993e-d74f-d5aa23efc554",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dca442fca5dd4e4a",
            "arn": "arn:aws:ec2:us-east-1:440744235311:elastic-ip/eipalloc-0dca442fca5dd4e4a",
            "domain": "vpc",
            "id": "eipalloc-0dca442fca5dd4e4a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-124-189.compute-1.amazonaws.com",
            "public_ip": "52.204.124.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-company-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-eip-1",
              "Project": "my-company"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f70262110390f341",
            "arn": "arn:aws:ec2:us-east-1:440744235311:elastic-ip/eipalloc-0f70262110390f341",
            "domain": "vpc",
            "id": "eipalloc-0f70262110390f341",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-50-73-229.compute-1.amazonaws.com",
            "public_ip": "100.50.73.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-company-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-eip-2",
              "Project": "my-company"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074c44af73349132e",
            "arn": "arn:aws:ec2:us-east-1:440744235311:elastic-ip/eipalloc-074c44af73349132e",
            "domain": "vpc",
            "id": "eipalloc-074c44af73349132e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-214-177-118.compute-1.amazonaws.com",
            "public_ip": "44.214.177.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-company-eip-3"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-eip-3",
              "Project": "my-company"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:internet-gateway/igw-0ca241980dd5bc39a",
            "id": "igw-0ca241980dd5bc39a",
            "owner_id": "440744235311",
            "tags": {
              "Name": "my-company-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-igw",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dca442fca5dd4e4a",
            "association_id": "eipassoc-0bd766ca0cf5c0767",
            "connectivity_type": "public",
            "id": "nat-02a5c446dbeca2709",
            "network_interface_id": "eni-067c36a9ad5a23d56",
            "private_ip": "10.0.1.244",
            "public_ip": "52.204.124.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031cb2facd0a485a1",
            "tags": {
              "Name": "my-company-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-nat-1",
              "Project": "my-company"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f70262110390f341",
            "association_id": "eipassoc-026d11f7d21479f19",
            "connectivity_type": "public",
            "id": "nat-047fbf55a762f0d84",
            "network_interface_id": "eni-0e30489d9b542ebbf",
            "private_ip": "10.0.2.247",
            "public_ip": "100.50.73.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04271f9d8c1942bd1",
            "tags": {
              "Name": "my-company-nat-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-nat-2",
              "Project": "my-company"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074c44af73349132e",
            "association_id": "eipassoc-0466c43b5cf212d84",
            "connectivity_type": "public",
            "id": "nat-0296dd22bc0145131",
            "network_interface_id": "eni-0ca220873c09e0932",
            "private_ip": "10.0.3.131",
            "public_ip": "44.214.177.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e226b03788d62bf",
            "tags": {
              "Name": "my-company-nat-3"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-nat-3",
              "Project": "my-company"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:route-table/rtb-06b9ade9b57488fd7",
            "id": "rtb-06b9ade9b57488fd7",
            "owner_id": "440744235311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a5c446dbeca2709",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-company-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-rt-1",
              "Project": "my-company"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:route-table/rtb-02696a3efc329584e",
            "id": "rtb-02696a3efc329584e",
            "owner_id": "440744235311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047fbf55a762f0d84",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-company-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-rt-2",
              "Project": "my-company"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:route-table/rtb-01cf5a781011c67f3",
            "id": "rtb-01cf5a781011c67f3",
            "owner_id": "440744235311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0296dd22bc0145131",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-company-private-rt-3"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-rt-3",
              "Project": "my-company"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:route-table/rtb-030df1624fab3cb70",
            "id": "rtb-030df1624fab3cb70",
            "owner_id": "440744235311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca241980dd5bc39a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-company-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-public-rt",
              "Project": "my-company"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b256fd79d77e6b0",
            "route_table_id": "rtb-06b9ade9b57488fd7",
            "subnet_id": "subnet-08e263b2a9cf5e788"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ce20c9604f23f7",
            "route_table_id": "rtb-02696a3efc329584e",
            "subnet_id": "subnet-0e3aa4ee2a28d0ff1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006d02b9dae1080c9",
            "route_table_id": "rtb-01cf5a781011c67f3",
            "subnet_id": "subnet-09ad6b0f14be3e0e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43dac1de3a93c2e",
            "route_table_id": "rtb-030df1624fab3cb70",
            "subnet_id": "subnet-031cb2facd0a485a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048a23ab90bdce988",
            "route_table_id": "rtb-030df1624fab3cb70",
            "subnet_id": "subnet-04271f9d8c1942bd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e090178aeacb44e6",
            "route_table_id": "rtb-030df1624fab3cb70",
            "subnet_id": "subnet-03e226b03788d62bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-08e263b2a9cf5e788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e263b2a9cf5e788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-subnet-1",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-0e3aa4ee2a28d0ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3aa4ee2a28d0ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-subnet-2",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-09ad6b0f14be3e0e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad6b0f14be3e0e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-private-subnet-3"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-private-subnet-3",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-031cb2facd0a485a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031cb2facd0a485a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-public-subnet-1",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-04271f9d8c1942bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04271f9d8c1942bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-public-subnet-2",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:subnet/subnet-03e226b03788d62bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e226b03788d62bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744235311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-company-public-subnet-3"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-public-subnet-3",
              "Project": "my-company"
            },
            "vpc_id": "vpc-0500fc1de03de0298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744235311:vpc/vpc-0500fc1de03de0298",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b65f5ed7d109b600",
            "default_route_table_id": "rtb-0a2459950fb9fb3e2",
            "default_security_group_id": "sg-0c71fee760b5dd362",
            "dhcp_options_id": "dopt-099d07a9a6432f29e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0500fc1de03de0298",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2459950fb9fb3e2",
            "owner_id": "440744235311",
            "tags": {
              "Name": "my-company-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "my-company-vpc",
              "Project": "my-company"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}